# ScholarInsight

./: .gitignore  Makefile  README.md  batch_topic_progress.md  cg.ps1  competeinsight_remnants_report.md  findings.md  progress.md  task_plan.md
backend/: .env.example  pyproject.toml
backend/cg/: __init__.py  auth.py  logging.py  main.py  settings.py
backend/cg/agents/: __init__.py  research_agents.py  runtime.py
backend/cg/api/: auth.py  extract.py  runs.py  skills.py
backend/cg/llm/: __init__.py  client.py
backend/cg/orchestrator/: pipeline.py
backend/cg/prompts/: discover_edges.md
backend/cg/references/: cognograph_utils.py  schema.md
backend/cg/repositories/: base.py  evidence.py  run.py
backend/cg/schemas/: research.py
backend/cg/tools/: fetcher.py  local_paper_search.py  search.py
backend/tests/: test_evidence_clusters.py  test_gap_assessment.py  test_idea_quality_evaluator.py  test_local_paper_search.py  test_local_quality_audit.py  test_pilot_freeze_tools.py  test_pipeline_red_team.py  test_report_composer_pipeline.py  test_search_tool.py  test_smoke.py  test_source_research.py  test_topic_dimensions.py
docs/: advisor_idea_brief.md  embedding_granularity_mineru_plan.md  project_handoff_2026-06-21.md
docs/paper/: aaai_draft.md  references.bib
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/styles/: global.css
scripts/: ablation_quality_table.py  batch_daemon.py  build_embeddings.py  build_paper_index.py  competegraph-desktop-fit.css  competegraph-mobile-hotfix.css  competegraph-responsive-override.css  competegraph.nginx.conf  deploy_satmon.ps1  idea_quality_evaluator.py  init_data.py  install_competegraph_remote.sh  install_scholarinsight_remote.sh  local_quality_audit.py  paper_experiment_packet.py  paper_manuscript_draft.py  pilot_freeze_validator.py  regenerate_report.py  render_fresh_pilot_artifacts.py  runtime_ablation_table.py  scholarinsight-laptop-stack.css  scholarinsight-mobile-overflow-fix.css  scholarinsight-mobile-title-fix.css  scholarinsight-responsive-override.css  scholarinsight.nginx.conf  topics.json
skills/: analysis_and_review.yaml  evidence_structuring.yaml  report_composer.yaml  research_planning.yaml  source_research.yaml
