[project]
name = "competegraph"
version = "0.1.0"
description = "AI-driven traceable competitive intelligence Agent collaboration system"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CompeteGraph Team" }]

dependencies = [
    # Web 框架
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=12",

    # 数据校验与序列化
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "orjson>=3.9",

    # 异步文件 IO
    "aiofiles>=23.2",
    "anyio>=4.3",

    # HTTP / 抓取
    "httpx>=0.27",
    "tenacity>=8.2",

    # 解析
    "trafilatura>=1.9",
    "selectolax>=0.3.20",
    "python-slugify>=8.0",

    # LLM (DeepSeek 兼容 OpenAI 协议)
    "openai>=1.20",
    "tiktoken>=0.6",

    # 工具
    "structlog>=24.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# 完整功能（W2 之后启用）：浏览器抓取、PDF、向量索引
full = [
    "playwright>=1.42",
    "pymupdf>=1.24",
    "pdfplumber>=0.10",
    "faiss-cpu>=1.8",
    "numpy>=1.26",
    "rapidfuzz>=3.6",
]

# 报告导出（W6 启用）
export = [
    "weasyprint>=61",
    "python-pptx>=0.6",
    "markdown>=3.5",
]

# 开发依赖
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "httpx>=0.27",
    "respx>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cg"]

# ============================================================
# 工具配置
# ============================================================

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["cg"]

[tool.ruff.lint]
select = [
    "E", "F", "W",          # pycodestyle / pyflakes
    "I",                     # isort
    "B",                     # bugbear
    "UP",                    # pyupgrade
    "SIM",                   # simplify
    "RUF",                   # ruff-specific
]
ignore = [
    "E501",                  # line too long: 交给 formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["trafilatura.*", "selectolax.*", "faiss.*", "fitz.*", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
